--- a/review/templates/review.html
+++ b/review/templates/review.html
@@ -58,7 +58,7 @@
   <div style="padding-top:60px">
     <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'main:show_main' %}">
           <img src="https://th.bing.com/th/id/OIP.AvspTpBxlo8rlUhLwCHVNwHaFj?pid=ImgDet&w=185&h=138&c=7&dpr=1,5" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           LiteraLoka
         </a>
