--- a/cart_checkout/templates/checkout.html
+++ b/cart_checkout/templates/checkout.html
@@ -1,6 +1,33 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid d-flex flex-row">
+      <a class="navbar-brand" href="{% url 'main:show_main' %}">
+        <img src="https://th.bing.com/th/id/OIP.AvspTpBxlo8rlUhLwCHVNwHaFj?pid=ImgDet&w=185&h=138&c=7&dpr=1,5" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        LiteraLoka
+      </a>
+      <div style="display: flex; flex-direction: row;">
+        <a href="{% url 'cart_checkout:book_checkout' %}"><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'main:logout' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Logout</button></a>
+        {% else %}
+            <a href="{% url 'main:login' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Login</button></a>
+        {% endif %}
+        <div class="dropdown" style="padding-right: 2px;">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img width="20" height="25" src="https://static.vecteezy.com/system/resources/previews/000/582/257/non_2x/bulleted-list-icon-vector-illustration.jpg"></img></button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Resensi</a></li>
+              <li><a class="dropdown-item" href="{% url 'review:show_review' %}">Review</a></li>
+              <li><a class="dropdown-item" href="{% url 'jualbuku:jual_buku' %}">Jual</a></li>
+              <li><a href="{% url 'inventory_management:literaloka_admin' %}" class="dropdown-item" href="#">Inventory</a></li>
+              <li><a class="dropdown-item" href="#">Wishlist</a></li>
+            </ul>
+          </div>
+      </div>
+    </div>
+</nav>
+
 <h1>Book Checkout</h1>
 
 <ul>
