--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,14 @@
 
     <body>
         {% block content %}
-        <nav class="navbar bg-body-tertiary">
+        <!-- <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                 <img src="https://th.bing.com/th/id/OIP.AvspTpBxlo8rlUhLwCHVNwHaFj?pid=ImgDet&w=185&h=138&c=7&dpr=1,5" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 LiteraLoka
               </a>
             </div>
-          </nav>
+          </nav> -->
         {% endblock content %}
     </body>
 </html>
