--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,23 +1,35 @@
 {% extends 'base.html' %}
+{% load static %}
 
 
 {% block content %}
-<style>
-    .list-link {
-        list-style-type: none;
-    }
-</style>
 
 <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+    <div class="container-fluid d-flex flex-row">
+      <a class="navbar-brand" href="{% url 'main:show_main' %}">
         <img src="https://th.bing.com/th/id/OIP.AvspTpBxlo8rlUhLwCHVNwHaFj?pid=ImgDet&w=185&h=138&c=7&dpr=1,5" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         LiteraLoka
       </a>
+      <div style="display: flex; flex-direction: row;">
+        <a href="{% url 'cart_checkout:book_checkout' %}"><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'main:logout' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Logout</button></a>
+        {% else %}
+            <a href="{% url 'main:login' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Login</button></a>
+        {% endif %}
+        <div class="dropdown" style="padding-right: 2px;">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img width="20" height="25" src="https://static.vecteezy.com/system/resources/previews/000/582/257/non_2x/bulleted-list-icon-vector-illustration.jpg"></img></button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Resensi</a></li>
+              <li><a class="dropdown-item" href="{% url 'review:show_review' %}">Review</a></li>
+              <li><a class="dropdown-item" href="{% url 'jualbuku:jual_buku' %}">Jual</a></li>
+              <li><a href="{% url 'inventory_management:literaloka_admin' %}" class="dropdown-item" href="#">Inventory</a></li>
+              <li><a class="dropdown-item" href="#">Wishlist</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
-  </nav>
-
-
+</nav>
 
 
 <div class="main-container d-flex p-3 flex-row">
@@ -30,6 +42,7 @@
                     <th>Title</th>
                     <th>Language</th>
                     <th>Author</th>
+                    <th>Price</th>
                     <th>Category</th>
                     <th>Year Published</th>
                     <th>Thumbnail</th>
@@ -44,12 +57,31 @@
                         <td>{{buku.title}}</td>
                         <td>{{buku.lang}}</td>
                         <td>{{buku.author}}</td>
+                        <td>{{buku.price}} <br>
+                            <button type="submit" class="btn btn-primary add-to-cart-button" book-id="{{buku.id}}">Add to Cart</button>
+                        </td>
                         <td>{{buku.category}}</td>
                         <td>{{buku.publication_date}}</td>
                         <td><img src = "{{buku.image_url}}" width="200"></td>
                     </tr>
                 {% endfor %}
             </table>
+                <div class="d-flex justify-content-start d-grid gap-3 flex-wrap m-3"">
+                
+                
+                    {% for buku in kumpulanbuku %}
+                        <div class="" style="width: 10rem;" id="product_table">
+                            <img src="{{ buku.image_url }}" class="card-img-top " alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title">{{ buku.title }}</h5>
+                            <p class="card-text">{{ buku.category }}</p>
+                            <a href="#" class="btn btn-primary">Lihat detail</a>
+                            </div>
+                        </div>
+                        <tr>
+                        </tr>
+                    {% endfor %}
+                </div>
         
             <br />
         
@@ -59,31 +91,50 @@
                 </button>
             </a>
     </div>
-    <div class="listpage border border-black w-30 p-2 m-2">
-        <h3>Contributor:</h3>
-        <ol>
-            <li>Fernando Valentino Sitinjak (2206081332)</li>
-            <li>Muhammad Hilmy Erryanto (2206025905)</li>
-            <li>Fathirahma Alyssa Pristanti (2206082215)</li>
-            <li>Chika Marsya Diandra Lumban Gaol (2206083344)</li>
-            <li>Pradipta Arya Pramudita (2206083685)</li>
-            <li>Leticia Kalila Darlene (2206830561)</li>
-        </ol>
+    <div class="listpage">
         <h3>Hyperlink:</h3>
-        <div class="list-link">
+        <div class="list-link" style="list-style-type: none;">
             <ul>
                 <li><a>Admin Site</a></li>
                 <li><a>Shop</a></li>
-                <li><a>Shopping cart & Checkout</a></li>
+                <li><a href="{% url 'cart_checkout:book_checkout' %}">
+                    Shopping cart & Checkout (<span id="amount-added">{{amount_added}}</span>)</a>
+                </li>
+                <li><a href="{% url 'cart_checkout:inventory' %}">User Inventory</a></li>
             </ul>
         </div>
     </div>  
     
 </div>
-<a href="{% url 'main:logout' %}">
-    <button>
-        Logout
-    </button>
-</a>
+
+{% if user.is_authenticated %}
+    <h3>Account: {{ name }}</h3>
+{% endif %}
+
+<script> 
+    document.querySelectorAll(".add-to-cart-button").forEach(function(button) {
+    button.addEventListener("click", function() {
+        var bookId = this.getAttribute("book-id");
+        // Send an AJAX request to add the book to the cart
+        fetch("{% url 'cart_checkout:add_to_cart' 0 %}".replace("0", bookId), {
+            method: "POST",
+            headers: {
+                "X-CSRFToken": "{{ csrf_token }}",
+                "X-Requested-With": "XMLHttpRequest", 
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById("amount-added").textContent = data.amount_added;
+        })
+        .catch(error => console.error("Error:", error));
+    });
+});
+</script>
+
 
 {% endblock content %}
+
+ 
+
+
